tests/fixtures/invalid/set_mul_bytes.py
# Cannot multiply Set[int] and Bytes
x: set[int] = {1, 2, 3} * b"hello"
